--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ springdoc:
     url: /v3/api-docs 
   swagger-ui:
     path: /swagger
-    supportedSubmitMethods: '"get", "put", "post"'
+    supportedSubmitMethods: '"get", "put", "post", "delete"'
 logging:
   file:
     name: log/app.log
