--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/application-local.yml
 
 ### STS ###
 .apt_generated
@@ -32,3 +32,4 @@ build/
 
 ### VS Code ###
 .vscode/
+
